--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://jihoyang0120.github.io/lazy-dev-note/"
+  "homepage": "https://jihoyang0120.github.io/lazy-dev-note/"
 }
